src/test/ui/consts/min_const_fn/loop_ice.stderr
error[E0723]: loops are not allowed in const fn
  --> $DIR/loop_ice.rs:2:5
   |
LL |     loop {}
   |     ^^^^^^^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add #![feature(const_fn)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
