src/test/ui/consts/min_const_fn/loop_ice.rs
const fn foo() {
    loop {} //~ ERROR loops are not allowed in const fn
}

fn main() {}
